# Edge-TPU-v6-Preview-Bench

./: .pre-commit-config.yaml  AUTONOMOUS_ENHANCED_SDLC_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT_TERRY.md  AUTONOMOUS_SDLC_SUMMARY.md  AUTONOMOUS_SDLC_SUMMARY_FINAL.md  CI-CD-SETUP.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  DEPLOYMENT_WORKFLOW_INSTRUCTIONS.md  Dockerfile  ENHANCED_PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_FINAL.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  README.md  TERRAGON_AUTONOMOUS_SDLC_BREAKTHROUGH_EXECUTION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_FINAL_EXECUTION_REPORT.md  ci-cd-workflow-manual.yml  demo.py  deployment_validation_report.txt  docker-compose.yml  pyproject.toml  pytest.ini  quality_gates_comprehensive.py  quality_gates_direct.py  quality_gates_report.json  quality_gates_validator.py  requirements-prod.txt  research_validation.py  research_validation_summary.json  research_validation_summary.md  security_audit.py  security_audit_report.txt  setup.py  test_basic_import.py  (+8 more)
.github/workflows/: ci-cd.yml
ci-cd-templates/: github-actions-template.yml
deploy/: deployment-guide.md  docker-compose.yml
deploy/disaster-recovery/: backup-restore.yaml
deploy/docker/: Dockerfile  healthcheck.py
deploy/k8s/: argo-rollouts.yaml  autoscaling.yaml  deployment.yaml  enhanced-deployment.yaml  namespace.yaml  rbac.yaml
deploy/monitoring/: alertmanager.yaml  grafana.yaml  prometheus.yaml
deploy/runbooks/: operational-runbooks.yaml
deploy/security/: network-policies.yaml  pod-security-standards.yaml
deploy/service-mesh/: istio-setup.yaml
deployment/: PRODUCTION_SUMMARY.md  deployment-guide.md  production-readiness-checklist.md
edge_tpu_v6_bench/: __init__.py  backends.py  harness.py  quantization.py  report.py
enhanced_results/: adaptive_benchmark.json
monitoring_results/: monitoring_report.json
publication_output/: edge_tpu_v6:_comprehensive_performance_analysis_for_next-generation_edge_ai.tex  novel_algorithms_breakthrough_paper.tex  research_impact_summary.md
publication_output/figures/: latency_distribution.tex  performance_comparison.tex  power_efficiency.tex  significance_heatmap.tex
publication_output/tables/: device_specifications.tex  performance_results.tex  statistical_results.tex
research/: literature_review.md
research_experiments/: edge_tpu_v6_performance_comparison_latency_ms_analysis.json  edge_tpu_v6_performance_comparison_report.md  edge_tpu_v6_performance_comparison_runs.json  edge_tpu_v6_performance_comparison_summary.json  exp_1755200582_e7d64fce_results.json
research_results/validation/: baseline_comparison_1755060998.json  baseline_comparison_1755443926.json  baseline_comparison_1756128959.json  baseline_comparison_1756216985.json  baseline_comparison_1756338871.json  research_report.md
robust_results/: robust_benchmark_20250812_222520.json  robust_benchmark_20250816_044815.json  robust_benchmark_20250824_033222.json
scalable_results/: multi_benchmark_20250812_223008.json  optimization_report.html  performance_test_20250812_223014.json  scalable_benchmark_20250812_222958.json  scalable_benchmark_20250814_193624.json  scalable_benchmark_20250814_194429.json  scalable_benchmark_20250816_044841.json  scalable_benchmark_20250824_033308.json
simple_results/: simple_benchmark_20250812_222137.json  simple_benchmark_20250812_222142.json  simple_benchmark_20250816_044749.json  simple_benchmark_20250824_033156.json
src/edge_tpu_v6_bench/: __init__.py  cli.py  robust_cli.py  scalable_cli.py  simple_cli.py
src/edge_tpu_v6_bench/analysis/: __init__.py  power.py  profiler.py
src/edge_tpu_v6_bench/benchmarks/: __init__.py  micro.py  standard.py
src/edge_tpu_v6_bench/compatibility/: __init__.py  migration.py
src/edge_tpu_v6_bench/core/: __init__.py  auto_scaler.py  benchmark.py  concurrent_execution.py  device_manager.py  enhanced_benchmark.py  error_handling.py  metrics.py  mock_dependencies.py  monitoring.py  monitoring_enhanced.py  performance_cache.py  power.py  resource_pool.py  robust_benchmark.py  scalable_benchmark.py  secure_config.py  security.py  simple_benchmark.py  validation.py
src/edge_tpu_v6_bench/quantization/: __init__.py  auto_quantizer.py
src/edge_tpu_v6_bench/quantization/strategies/: __init__.py  mixed_precision.py  post_training.py  qat.py
src/edge_tpu_v6_bench/quantum_planner/: __init__.py  performance_optimizer.py  quantum_cli.py  quantum_heuristics.py  quantum_optimizer.py  quantum_scheduler.py  quantum_task_engine.py  task_graph.py
src/edge_tpu_v6_bench/quantum_planner/compliance/: __init__.py
src/edge_tpu_v6_bench/quantum_planner/deployment/: __init__.py
src/edge_tpu_v6_bench/quantum_planner/i18n/: __init__.py
src/edge_tpu_v6_bench/research/: __init__.py  advanced_benchmark_suite.py  advanced_experimental_design.py  baseline_framework.py  experimental_design.py  novel_optimization.py  publication_tools.py  statistical_testing.py
tests/: __init__.py  performance_benchmark.py  performance_report.json  performance_report_demo.py  quantum_planner_performance_report.json  security_report.txt  security_scan.py  test_auto_quantizer.py  test_backends.py  test_benchmark.py  test_cli.py  test_device_manager.py  test_harness.py  test_integration.py  test_integration_basic.py  test_mock_demo.py  test_quantization.py  test_quantum_basic.py  test_quantum_planner.py  test_report.py  test_security_scan.py  test_standalone.py
