[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "edge-tpu-v6-bench"
version = "0.1.0"
description = "Benchmark harness for Edge TPU v5e and projected v6 performance (numpy simulation)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
